--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,294 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<!-- =========== BEGIN CONTENT FOR THE PAGE =========================================================================== -->
+    <div class="page-content" role="main">
+        <div class="container"> 
+            <!-- .container for entire page --> 
+
+
+
+                <!-- uses bigtext.js plugin AND clever use of the responsive utilities and the grid // unless you use the same character count, the results will vary -->
+                <div class="row sixteen-gutter big-text-banner-wrapper">
+                    <div class="col-lg-3">
+                        <h3 class="big-text-banner">
+                            <span class="hidden-lg">
+                                PLE &middot; Personal
+                            </span>
+                            <span class="visible-lg">
+                                Personal
+                            </span>
+                            <span class="visible-lg">
+                                Twitter
+                            </span>
+                            <span>
+                                Learning
+                                <span class="visible-xs-inline-block visible-sm-inline-block visible-md-inline-block">
+                                    &middot; Environment
+                                </span>
+                            </span>
+                            <span class="visible-lg">
+                                Google &middot; Blogs
+                            </span>
+                            <span class="visible-lg">
+                                Environment
+                            </span>
+                        </h3>
+                    </div>
+                    <div class="col-lg-9 visible-lg">
+                        <h3 class="big-text-banner big-text-main-headline">
+                            <span>
+                                Project
+                            </span>
+                        </h3>
+                    </div>
+                </div>
+                <!-- .row .sixteen-gutter --> 
+                
+                <!-- _________ SLICK SLIDER SINGLE CAROUSEL AND COLUMN EQUAL HEIGHT ___________ -->
+                <div class="row sixteen-gutter">
+                    <div class="col-sm-7 col-md-8">
+                        <div class="featured-carousel single-item-carousel slick-dots-left fade-hover-img loading-slick">
+                            <div class="slick-slider-item">
+                                <figure>
+                                    <%= link_to image_tag("site-images/LifeLearn.jpg") %> 
+                                    <figcaption class="info-text-box">Credit: <a class="link-underline external" href="https://www.flickr.com/photos/stephen_downes/506077088/in/photostream/" target="_blank">Stephen Downes flickr</a>. Lifelong Learning.</figcaption>
+                                </figure>
+                            </div>
+                            <!--/.slick-slider-item-->
+                            <div class="slick-slider-item">
+                                <figure>
+                                    <%= link_to image_tag("site-images/learn.jpg") %> 
+                                    <figcaption class="info-text-box">Nil Credit</a>. Learn.</figcaption>
+                                </figure>
+                            </div>
+                            <!--/.slick-slider-item-->
+                            <div class="slick-slider-item">
+                                <figure>
+                                    <%= link_to image_tag("site-images/ple.jpg") %> 
+                                    <figcaption class="info-text-box">Nil Credit</a>. P.L.E.</figcaption>
+                                </figure>
+                            </div>
+                            <!--/.slick-slider-item--> 
+                        </div>
+                    </div>
+                    <!--/.col-x-x-->
+                    
+                    <hr class="visible-xs vertical-spacer vertical-spacer-xs">
+                    <!-- add some vertical spacing when stacked -->
+                    <div class="col-sm-5 col-md-4">
+                        <div class="column-inner column-featured">
+                            <h3 class="h2 column-featured-headline">Thinking Differently</h3>
+                            <p class="lead"> I've established this site to document my progress and to encourage discussion of my research into the concept of Personal Learning Environments in Medical Education. </p>
+                            <p> If you are unfamiliar with the concept of PLEs, click the link below for more information.</p>
+                            <p> <a class="btn btn-featured btn-lg" href="#">Get More Info <i class="fa fa-arrow-right fa-fw"></i></a> </p>
+                            <span class="column-bg-fake">
+                                <!-- this is a fake column that follows the height of the carousel image -->
+                            </span>
+                        </div>
+                        <!--/.column-inner .column-featured--> 
+                    </div>
+                    <!--/.col-x-x--> 
+                </div>
+                <!--/.row sixteen-gutter--> 
+                
+                <!-- VERTICAL SPACING -->
+                <hr class="vertical-spacer vertical-spacer-lg">
+                
+                <!-- _________ CALL TO ACTION ___________ -->
+                <div class="call-to-action"> 
+                    <!-- call to action is set up for one or more lines, if more than one line it centers -->
+                    <h3 class="call-to-action-text">Built on Bootstrap Theme using Ruby on Rails, HTML5 & jQuery (amongst others).</h3>
+                </div>
+                <!-- /.call-to-action --> 
+                
+                <!-- VERTICAL SPACING -->
+                <hr class="vertical-spacer vertical-spacer-lg">
+                <div class="headline-inline">
+                    <h3 class="headline"> Featured </h3>
+                    <a class="headline-link" href="#"><i class="ti ti-arrow-right"></i> Coming Soon</a> </div>
+                <!-- /.headline-inline -->
+                
+                <div class="multi-item-slick slick-dots-left fade-hover-img loading-slick">
+                    <div class="slick-slider-item"> <a href="google.com">
+                        <figure> <%= link_to image_tag('site-images/blogholderpic.jpg') %>
+                            <figcaption>
+                                <h3>Latest Blog Post</h3>
+                                <p>Documenting my journey into MedEd Research and other related matters.</p>
+                            </figcaption>
+                        </figure>
+                        </a>
+                        <p class="credit">'Writing Tools' Credit: peteoshea/Flickr</p>
+                    </div>
+                    <!-- /.slick-slider-item -->
+                    
+                    <!-- <div class="slick-slider-item"> <a href="portfolio-masonry.html">
+                        <figure> <img data-lazy="assets/demo-images/latest-work-slick/7ptstar-me.jpg" alt="">
+                            <figcaption>
+                                <h3>7 Pointed Star</h3>
+                                <p>Grape silver beet watercress potato tigernut corn groundnut.</p>
+                            </figcaption>
+                        </figure>
+                        </a>
+                        <p class="credit">Credit: Christina Arasmo/Theme Designer</p>
+                    </div> -->
+                    <!-- /.slick-slider-item -->
+                    
+                    <!-- <div class="slick-slider-item"> <a href="portfolio-masonry.html">
+                        <figure> <img data-lazy="assets/demo-images/latest-work-slick/1383113606.jpg" alt="">
+                            <figcaption>
+                                <h3>The Italic Poster</h3>
+                                <p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut.</p>
+                            </figcaption>
+                        </figure>
+                        </a>
+                        <p class="credit">Credit: <a class="external link-underline" href="http://www.flickr.com/photos/asthmatic/1383113606/">asthmatic</a> via <a class="external link-underline" href="http://photopin.com">photopin</a> <a class="external link-underline" href="http://creativecommons.org/licenses/by-nd/2.0/">cc</a>.</p>
+                    </div> -->
+                    <!-- /.slick-slider-item -->
+                    
+                    <!-- <div class="slick-slider-item"> <a href="portfolio-masonry.html">
+                        <figure> <img data-lazy="assets/demo-images/latest-work-slick/buddha-me.jpg" alt="">
+                            <figcaption>
+                                <h3>See Yourself In Others</h3>
+                                <p>All beings tremble before violence. All fear death. All love live. See yourself in others, then what harm can you do?</p>
+                            </figcaption>
+                        </figure>
+                        </a>
+                        <p class="credit">Credit: Christina Arasmo/Theme Designer</p>
+                    </div> -->
+                    <!-- /.slick-slider-item -->
+                    
+                    <!-- <div class="slick-slider-item"> <a href="portfolio-masonry.html">
+                        <figure> <img data-lazy="assets/demo-images/latest-work-slick/om-me.jpg" alt="">
+                            <figcaption>
+                                <h3>Om Sweet Aum</h3>
+                                <p>A retro Om design I created a long, long time ago.</p>
+                            </figcaption>
+                        </figure>
+                        </a>
+                        <p class="credit">Credit: Christina Arasmo/Theme Designer</p>
+                    </div> -->
+                    <!-- /.slick-slider-item -->
+                    
+                    <!-- <div class="slick-slider-item"> <a href="portfolio-masonry.html">
+                        <figure> <img data-lazy="assets/demo-images/latest-work-slick/2191568652.jpg" alt="">
+                            <figcaption>
+                                <h3>See Yourself In Others</h3>
+                                <p>All beings tremble before violence. All fear death. All love live. See yourself in others, then what harm can you do?</p>
+                            </figcaption>
+                        </figure>
+                        </a>
+                        <p class="credit">Credit: <a class="external link-underline" href="http://www.flickr.com/photos/karenhorton/2191568652/">karen horton</a> via <a class="external link-underline" href="http://photopin.com">photopin</a> <a class="external link-underline" href="http://creativecommons.org/licenses/by/2.0/">cc</a></p>
+                    </div> -->
+                    <!-- /.slick-slider-item -->
+                    
+                    <!-- <div class="slick-slider-item"> <a href="portfolio-masonry.html">
+                        <figure> <img data-lazy="assets/demo-images/latest-work-slick/3210096256.jpg" alt="">
+                            <figcaption>
+                                <h3>Title Goes Here</h3>
+                                <p>Catsear cauliflower garbanzo yarrow salsify chicory garlic bell pepper napa cabbage lettuce tomato kale.</p>
+                            </figcaption>
+                        </figure>
+                        </a>
+                        <p class="credit">Credit: <a class="external link-underline" href="http://www.flickr.com/photos/ollieolarte/3210096256/">olarte.ollie</a> via <a class="external link-underline" href="http://photopin.com">photopin</a> <a class="external link-underline" href="http://creativecommons.org/licenses/by-sa/2.0/">cc</a>.</p>
+                    </div> -->
+                    <!-- /.slick-slider-item -->
+                    
+               <!--      <div class="slick-slider-item"> <a href="portfolio-masonry.html">
+                        <figure> <img data-lazy="assets/demo-images/latest-work-slick/6995883979.jpg" alt="">
+                            <figcaption>
+                                <h3>Title Goes Here</h3>
+                                <p>Catsear cauliflower garbanzo yarrow salsify chicory garlic bell pepper napa cabbage.</p>
+                            </figcaption>
+                        </figure>
+                        </a>
+                        <p class="credit">Credit: <a class="external link-underline" href="http://www.flickr.com/photos/chrispiascik/6995883979/">Chris Piascik</a> via <a class="external link-underline" href="http://photopin.com">photopin</a> <a href="http://creativecommons.org/licenses/by-nd/2.0/">cc</a>.</p>
+                    </div> -->
+                    <!-- /.slick-slider-item --> 
+                    
+                </div>
+                <!-- /.multi-item-slick --> 
+                
+                <!-- VERTICAL SPACING -->
+                <hr class="vertical-spacer vertical-spacer-lg">
+                <div class="headline-inline">
+                    <h3 class="headline"> PLE Quotes </h3>
+                    <a class="headline-link" href="#"><i class="ti ti-arrow-right"></i> More Testimonails</a> </div>
+                <!-- /.headline-inline --> 
+                
+                <!-- ______________ TESTIMONIAL SLIDER :: USES slick slider______________ -->
+                <div class="testimonial-slider slick-dots-left loading-slick">
+                    <div class="slick-slider-item"> 
+                        <!-- testimonial in quote box -->
+                        <div class="testimonial ">
+                            <blockquote>
+                                <p>If we take the needs of lifelong learners seriously, they challenge the current paradigm of the Web server-based learning environment. In particular this architecture does not meet the lifelong learners’ needs for a consistent user interface; their need for a learning profile of their own that is necessary for (co-)managing their learning career; nor does it meet the need to be able to carry on learning while temporarily disconnected from a remote learning server.</p>
+                            </blockquote>
+                        </div>
+                        <!-- /.testimonial -->
+                        <div class="author-wrapper">
+                            <div class="arrow"> </div>
+                            <!-- /.arrow -->
+                            <div class="cite"> Olivier & Liber,
+                                <span>
+                                    2001, Bolton Institute
+                                </span>
+                            </div>
+                            <!-- /.author-wrapper --> 
+                        </div>
+                        <!-- end testimonial in quote box chunk --> 
+                    </div>
+                    <!-- /.slick-slider-item -->
+                    
+                    <div class="slick-slider-item"> 
+                        <!-- testimonial in quote box -->
+                        <div class="testimonial ">
+                            <blockquote>
+                                <p>Nurturing and maintaining connections is
+needed to facilitate continual learning.</p>
+                            </blockquote>
+                        </div>
+                        <!-- /.testimonial -->
+                        <div class="author-wrapper">
+                            <div class="arrow"> </div>
+                            <!-- /.arrow -->
+                            <div class="cite"> George Siemens,
+                                <span>
+                                    2005 in Connectivism: Learning as Network-Creation
+                                </span>
+                            </div>
+                            <!-- /.author-wrapper --> 
+                        </div>
+                        <!-- end testimonial in quote box chunk --> 
+                    </div>
+                    <!-- /.slick-slider-item -->
+                    
+                    <div class="slick-slider-item"> 
+                        <!-- testimonial in quote box -->
+                        <div class="testimonial ">
+                            <blockquote>
+                                <p>The idea behind the personal learning environment is that the management of learning migrates from the institution to the learners.</p>
+                            </blockquote>
+                        </div>
+                        <!-- /.testimonial -->
+                        <div class="author-wrapper">
+                            <div class="arrow"> </div>
+                            <!-- /.arrow -->
+                            <div class="cite"> Stephen Downes,
+                                <span>
+                                    2006
+                                </span>
+                            </div>
+                            <!-- /.author-wrapper --> 
+                        </div>
+                        <!-- end testimonial in quote box chunk --> 
+                    </div>
+                    <!-- /.slick-slider-item --> 
+                    
+                </div>
+                <!-- /.testimonial-slider --> 
+                
+                
+
+        </div>
+        <!-- / .container --> 
+    </div>
+    <!-- /.page-content role=main --> 
+<!--=========== END CONTENT FOR THE PAGE ============================================================ --> 
