--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,15 +1,18 @@
+
+
 // CSS
 /*
-  *= require theme-assets.min
-  *= require bootstrap
-  *= require bootstrap.min
-  *= require logo-font
- *= require theme-assets.unpacked
+*= require bootstrap
  *= require b-different-retro.unpacked
+ *= require theme-assets.min
+ *= require bootstrap.min
+ *= require b-different-retro.min
+ *= require logo-font
+ *= require theme-assets.unpacked
  *= require jquery-ui
 */ 
 
-@import 'bootstrap';
+
 @import "themify-icons";
 
 // Font Awesome
