--- a/app/views/layouts/_slideoutpanels.html.erb
+++ b/app/views/layouts/_slideoutpanels.html.erb
@@ -85,15 +85,11 @@
                 <!-- /.col-md-6 -->
                 
                 <div class="col-md-6">
-                    <h3>Find Us On...</h3>
+                    <h3>Find Me On...</h3>
                     <ul class="social-icon-list">
-                        <li><a href="#"><i class="fa fa-fw fa-2x fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-fw fa-2x fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-fw fa-2x fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-fw fa-2x fa-github"></i></a></li>
                         <li><a href="#"><i class="fa fa-fw fa-2x fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-fw fa-2x fa-pinterest"></i></a></li>
-                        <li><a href="#"><i class="fa fa-fw fa-2x fa-instagram"></i></a></li>
                     </ul>
                 </div>
                 <!-- /.col-md-6 --> 
@@ -111,37 +107,7 @@
         <div class="container">
             <h2 class="slide-panel-title">Login/out</h2>
             <div class="row">
-                <!-- <div class="col-md-6"> -->
-                    <!-- <h4 class="no-margin-top">Social Login</h4>
-                    <ul class="list-unstyled social-user">
-                        <li><a href="#" title="Login with Facebook" class="facebook"><i class="fa fa-facebook"></i>
-                            <span>
-                                Login with Facebook
-                            </span>
-                            </a></li>
-                        <li><a href="#" title="Login with Google Plus" class="google"><i class="fa fa-google-plus"></i>
-                            <span>
-                                Login with Google
-                            </span>
-                            </a></li>
-                        <li><a href="#" title="Login with Twitter" class="twitter"><i class="fa fa-twitter"></i>
-                            <span>
-                                Login with Twitter
-                            </span>
-                            </a></li>
-                        <li><a href="#" title="Login with Wordpress" class="wordpress"><i class="fa fa-wordpress"></i>
-                            <span>
-                                Login with Wordpress
-                            </span>
-                            </a></li>
-                    </ul> -->
-                    <!-- /.social-user --> 
-                <!-- </div> -->
-                <!-- /.col-*-6 -->
-                <!-- <div class="col-md-6"> -->
                     <%= render 'layouts/newsession' %>
-                <!-- </div> -->
-                <!-- /.col-*-6 --> 
             </div>
             <!-- /.row --> 
         </div>
@@ -155,33 +121,6 @@
         <div class="container">
             <h2 class="slide-panel-title">Sign Up</h2>
             <div class="row">
-                <!-- <div class="col-md-6"> -->
-                    <!-- <h4 class="no-margin-top">Sign Up with...</h4> -->
-                    <!-- <ul class="list-unstyled social-user">
-                        <li><a href="#" title="Signup with Facebook" class="facebook"><i class="fa fa-facebook"></i>
-                            <span>
-                                Signup with Facebook
-                            </span>
-                            </a></li>
-                        <li><a href="#" title="Signup with Google Plus" class="google"><i class="fa fa-google-plus"></i>
-                            <span>
-                                Signup with Google
-                            </span>
-                            </a></li>
-                        <li><a href="#" title="Signup with Twitter" class="twitter"><i class="fa fa-twitter"></i>
-                            <span>
-                                Signup with Twitter
-                            </span>
-                            </a></li>
-                        <li><a href="#" title="Signup with Wordpress" class="wordpress"><i class="fa fa-wordpress"></i>
-                            <span>
-                                Signup with Wordpress
-                            </span>
-                            </a></li>
-                    </ul> -->
-                    <!-- /.social-user --> 
-                <!-- </div> -->
-                <!-- /.col-*-6 -->
                <!--  <div class="col-md-6"> -->
                     <h4 class="no-margin-top">Register for Updates</h4>
                     <!-- <form role="form" action="your-script.php"> -->
