add masonry rails gem

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,7 +38,7 @@
                     <!-- BEGIN 1st .header-btn .header-btn-xl in first row --> 
                     <a href="#" class="login-toggle header-btn header-btn-xl" data-slide="slide" data-target="#login-panel"> <i class="fa fa-sign-in header-icon"></i>
                     <span class="header-btn-text">
-                        Login
+                        Log In / Out
                     </span>
                     </a> 
                     <!-- this above data-slide toggles the #login-panel .slide-panel example --> 
