add disqus commenting

--- a/app/views/pletools/show.html.erb
+++ b/app/views/pletools/show.html.erb
@@ -6,9 +6,9 @@
         <div class="container">
             <h2>PLE Tool</h2>
             <ol class="breadcrumb page-header-breadcrumb hidden-xs">
-                <li><a href="index.html" class="link-underline">Home</a></li>
-                <li> <a class="link-underline" href="blog-summary-masonry-layout.html"> Blog</a> </li>
-                <li class="active">PLE Tool</li>
+                <li><%= link_to "Home", root_path, class: "link-underline" %></li>
+                <li><%= link_to "Blog", pletools_path, class: "link-underline" %> </li>
+                <li class="active"><%= @pletool.title %></li>
             </ol>
         </div>
         <!-- /.container (for page-header-primary) --> 
