--- a/app/views/pletools/_pletool.html.erb
+++ b/app/views/pletools/_pletool.html.erb
@@ -2,7 +2,9 @@
     <div class "entry-title">
         <%= @pletool.title %>
         <br>
-        <%= Rinku.auto_link(@pletool.link).html_safe %>
+        <div class="btn btn-info">
+            <%= Rinku.auto_link(@pletool.link).html_safe %>
+        </div>
     </div>    
         <br>
     <ul class="entry-meta list-inline">
@@ -10,10 +12,6 @@
             <span class="ti ti-pencil-alt">
             </span>
             by Anthony Llewellyn</li>
-        <li><a href="blog-single.html#view-comments" class="has-anchor">
-            <span class="ti ti-comments">
-            </span>
-            6 Comments</a></li>
         <li>
             <span class="ti ti-calendar">
             </span>
