separate out tagging for pletools and posts

--- a/app/views/pletools/_pletool.html.erb
+++ b/app/views/pletools/_pletool.html.erb
@@ -21,7 +21,7 @@
         <% @pletool.tags.any? %>
             <% @pletool.tags.each do |tag| %>
                 <li><a href="#"> 
-                    <%= link_to tag.name, tag_path(tag.name) %>
+                    <%= link_to tag.name, pletag_path(tag.name) %>
                 </a></li>  
         <% end %>
     </ul>
