additiional header on views to ensure javascript rendering

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -89,10 +89,14 @@
     <!-- /END .header-inner --> 
 </header>
 <!-- =============== END HEADER ==============================-->
+
+
+
 <footer>
     <script>
         $(document).ready(function() {
         $('.has-tooltip').tooltip();
+         $('.has-popover').popover();
         });
     </script>
 </footer>
