--- a/app/views/layouts/_slideoutpanels.html.erb
+++ b/app/views/layouts/_slideoutpanels.html.erb
@@ -170,3 +170,13 @@
 </div>
 <!-- END .slide-down-parent --> 
 <!-- ================== END SLIDE OUT PANELS  ================= --> 
+
+
+<footer>
+    <script>
+        $(document).ready(function() {
+        $('.has-tooltip').tooltip();
+         $('.has-popover').popover();
+        });
+    </script>
+</footer>
