--- a/app/views/layouts/_slideoutpanels.html.erb
+++ b/app/views/layouts/_slideoutpanels.html.erb
@@ -65,16 +65,18 @@
         <!--themify icon font--> 
         </a>
         <div class="container">
-            <h2 class="slide-panel-title text-center-md-view text-center-md-view">Contact Us</h2>
+            <h2 class="slide-panel-title text-center-md-view text-center-md-view">Contact Me</h2>
             <div class="row">
                 <div class="col-md-6 text-right-md-view text-right-lg-view">
-                    <h3>Organized Organization</h3>
-                    <p class="lead"> 1255 Nowhere Street<br>
-                        Tampa, FL 33655<br>
-                        <strong>phone:</strong> <a href="tel:8135551234">813.555.1234</a><br>
-                        <strong>fax:</strong> 813.555.1235<br>
+                    <h3>Dr Anthony Llewellyn</h3>
+                    <h3>C/- Health Education & Training Institute NSW</h3>
+                    <p class="lead"> Building 12, Gladesville Hospital <br>
+                        Shea Close (off Victoria Road) <br>
+                        Gladesville NSW 2111<br>
+                        <strong>phone:</strong> <a href="tel:61298446583">61.2.9844.6583</a><br>
+                        <strong>fax:</strong> 61.2.9844.6544<br>
                         <span class="overflow">
-                            <strong>email:</strong> <a class="link-underline" href="mailto:email@domain.com">email@companydomain.com</a>
+                            <strong>email:</strong> <a class="link-underline" href="mailto:Anthony.Llewellyn@health.nsw.gov.au">Anthony.Llewellyn@health.nsw.gov.au</a>
                         </span>
                     </p>
                 </div>
@@ -83,9 +85,9 @@
                 <div class="col-md-6">
                     <h3>Find Me On...</h3>
                     <ul class="social-icon-list">
-                        <li><a href="#"><i class="fa fa-fw fa-2x fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-fw fa-2x fa-github"></i></a></li>
-                        <li><a href="#"><i class="fa fa-fw fa-2x fa-linkedin"></i></a></li>
+                        <li><%= link_to '<i class="fa fa-fw fa-2x fa-twitter"></i>'.html_safe, "http://www.twitter.com/HETIMedDir", :'data-hover' => 'tooltip', :'data-placement' => 'bottom', :title => 'twitter' %></li>
+                        <li><%= link_to '<i class="fa fa-fw fa-2x fa-linkedin"></i>'.html_safe, "https://au.linkedin.com/in/drallewellyn", :'data-hover' => 'tooltip', :'data-placement' => 'bottom', :title => 'linkedin' %></li>
+                        <li><%= link_to '<i class="fa fa-fw fa-2x fa-github"></i>'.html_safe, "https://github.com/drallewellyn", :'data-hover' => 'tooltip', :'data-placement' => 'bottom', :title => 'the github' %></li>
                     </ul>
                 </div>
                 <!-- /.col-md-6 --> 
@@ -118,7 +120,7 @@
             <h2 class="slide-panel-title">Sign Up</h2>
             <div class="row">
                <!--  <div class="col-md-6"> -->
-                    <h4 class="no-margin-top">Register for Updates</h4>
+                    <h4 class="no-margin-top">Register for Updates - Coming Soon</h4>
                     <!-- <form role="form" action="your-script.php"> -->
                         <div class="form-group">
                             <input type="firstname" class="form-control form-control-lg" placeholder="Enter first name">
@@ -167,12 +169,3 @@
 <!-- END .slide-down-parent --> 
 <!-- ================== END SLIDE OUT PANELS  ================= --> 
 
-
-<footer>
-    <script>
-        $(document).ready(function() {
-        $('.has-tooltip').tooltip();
-         $('.has-popover').popover();
-        });
-    </script>
-</footer>
