--- a/app/views/pletools/_form.html.erb
+++ b/app/views/pletools/_form.html.erb
@@ -26,7 +26,7 @@
       <%= f.text_field :title, class: 'form-control form-control-lg' %><br>
         <br>
       <%= f.label :link %>*<br>
-      <%= f.text_field :link, class: 'form-control form-control-lg' %><br>
+      <%= f.url_field :link, class: 'form-control form-control-lg' %><br>
         <br>  
       <%= f.label :description %>*<br>
       <%= f.text_area :description, class: 'form-control form-control-lg', :rows => "10" %><br>
