--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -241,8 +241,7 @@
                         <!-- testimonial in quote box -->
                         <div class="testimonial ">
                             <blockquote>
-                                <p>Nurturing and maintaining connections is
-needed to facilitate continual learning.</p>
+                                <p>Nurturing and maintaining connections is needed to facilitate continual learning.</p>
                             </blockquote>
                         </div>
                         <!-- /.testimonial -->
@@ -281,7 +280,28 @@ needed to facilitate continual learning.</p>
                         <!-- end testimonial in quote box chunk --> 
                     </div>
                     <!-- /.slick-slider-item --> 
-                    
+                    <div class="slick-slider-item"> 
+                        <!-- testimonial in quote box -->
+                        <div class="testimonial ">
+                            <blockquote>
+                                <p>Unfortunately, today most physicians do not know how to connect their learning to their practice.</p>
+                            </blockquote>
+                        </div>
+                        <!-- /.testimonial -->
+                        <div class="author-wrapper">
+                            <div class="arrow"> </div>
+                            <!-- /.arrow -->
+                            <div class="cite"> Michael D'Alessandro,
+                                <span>
+                                    2011, Pediatric Radiology
+                                </span>
+                            </div>
+                            <!-- /.author-wrapper --> 
+                        </div>
+                        <!-- end testimonial in quote box chunk --> 
+                    </div>
+                    <!-- /.slick-slider-item --> 
+
                 </div>
                 <!-- /.testimonial-slider --> 
                 
