--- a/app/views/pletools/show.html.erb
+++ b/app/views/pletools/show.html.erb
@@ -8,7 +8,7 @@
             <h2>PLE Tool</h2>
             <ol class="breadcrumb page-header-breadcrumb hidden-xs">
                 <li><%= link_to "Home", root_path, class: "link-underline" %></li>
-                <li><%= link_to "Blog", pletools_path, class: "link-underline" %> </li>
+                <li><%= link_to "PLE Tools", pletools_path, class: "link-underline" %> </li>
                 <li class="active"><%= @pletool.title %></li>
             </ol>
         </div>
