--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
         <div class="container">
             <h2>Blog Summary</h2>
             <ol class="breadcrumb page-header-breadcrumb hidden-xs">
-                <li><a href="index.html" class="link-underline">Home</a></li>
+                <li><%= link_to 'Home', root_path, :class => 'link-underline' %></li>
                 <li class="active">Blog Summary</li>
             </ol>
         </div>
