--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,15 +10,16 @@
                 <div class="col-sm-5 col-md-3 footer-col">
                     <h4 class="footer-title">Socialfy</h4>
                     <ul class="social-icon-list">
-                        <li><a href="#"><i class="fa fa-fw fa-2x fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-fw fa-2x fa-github"></i></a></li>
-                        <li><a href="#"><i class="fa fa-fw fa-2x fa-linkedin"></i></a></li>
+                        <li><%= link_to '<i class="fa fa-fw fa-2x fa-twitter"></i>'.html_safe, "http://www.twitter.com/HETIMedDir", :'data-hover' => 'tooltip', :'data-placement' => 'right', :title => 'twitter' %></li>
+                        <li><%= link_to '<i class="fa fa-fw fa-2x fa-linkedin"></i>'.html_safe, "https://au.linkedin.com/in/drallewellyn", :'data-hover' => 'tooltip', :'data-placement' => 'right', :title => 'linkedin' %></li>
+                        <li><%= link_to '<i class="fa fa-fw fa-2x fa-github"></i>'.html_safe, "https://github.com/drallewellyn", :'data-hover' => 'tooltip', :'data-placement' => 'right', :title => 'the github' %></li>
                     </ul>
                 </div>
                 <!-- /.col-sm-5 .col-md-3 footer-col -->
                 <div class="col-sm-7 col-md-9 footer-col">
                     <h4 class="footer-title">About Me</h4>
-                    <p>II'm a Psychiatrist, Medical Manager and a few years ago I got selected for a really cool job managing a whole host of medical education and training jobs.  I've always been interested in technology.</p>
+                    <div class="has-tooltip" data-hover= "tooltip" data-placement="top" title="stick a popup picture here">
+                    <p>I'm a Psychiatrist, Medical Manager and a few years ago I got selected for a really cool job managing a whole host of medical education and training jobs.  I've always been interested in technology.</p>
                 </div>
                 <!-- /.col-sm-7 col-md-9 footer-col--> 
             </div>
@@ -66,7 +67,7 @@
         <div class="container">
             <p class="no-margin">© Theme Copyright 2015 WebsiteTemplatesThatRock.com. 
                 All rights reserved. 
-                Email <a href="mailto:drallewellyn@me.com" class="link-underline">the designer.</a> | <a class="link-underline" href="site-map.html">Site Map</a> </p>
+                Email <a href="mailto:drallewellyn@me.com" class="link-underline">the developer.</a> | <a class="link-underline" href="site-map.html">Site Map</a> </p>
         </div>
     </div>
     <!--/.footer-copyright--> 
