--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,23 +39,25 @@
                     </a> 
                     <!-- this above data-slide toggles the #login-panel .slide-panel example --> 
                     <!-- /END 1st .header-btn .header-btn-xl in first row --> 
-                    <!-- BEGIN 2nd.header-btn .header-btn-xl in first row --> 
-                    <a href="#" class="signin-toggle header-btn header-btn-xl" data-slide="slide" data-target="#signup-panel"> <i class="fa fa-pencil header-icon"></i>
-                    <span class="header-btn-text">
-                        Sign Up
-                    </span>
-                    </a> 
+                    <!-- BEGIN 2nd.header-btn .header-btn-xl in first row -->
+                    <div class="has-tooltip">
+                        <a href="#" class="signin-toggle header-btn header-btn-xl" data-slide="slide" data-target="#signup-panel" data-hover="tooltip" data-placement="left" title="for email updates"> <i class="fa fa-pencil header-icon"></i>
+                        <span class="header-btn-text">
+                            Sign Up
+                        </span>
+                        </a> 
+                    </div>
                     <!-- this above data-slide toggles the #signup-panel .slide-panel example --> 
                     <!-- /END 2nd .header-btn .header-btn-xl in first row --> 
                 </div>
                 <!-- /.header-btn-row-->
                 <div class="header-btn-row half-row"> 
                     <!-- BEGIN 3rd .header-btn .header-btn-lg in second row --> 
-                    <a href="#" class="anchor header-btn header-btn-lg" data-slide="slide" data-target="#contact-panel"> <i class="fa fa-user-md header-icon"></i>
-                    <span class="header-btn-text">
-                        Contact
-                    </span class = "has-tooltip">
-                    </a> 
+                        <a href="#" class="anchor header-btn header-btn-lg has-tooltip" data-slide="slide" data-target="#contact-panel" data-hover="tooltip" data-placement="left" title="all of my details"> <i class="fa fa-user-md header-icon"></i>
+                        <span class="header-btn-text">
+                            Contact
+                        </span class = "has-tooltip">
+                        </a> 
                     <a href="#" class="header-btn header-btn-sm search-toggle" data-slide="slide" data-target="#search-panel" data-hover="tooltip" data-placement="left" title="search"> <i class="fa fa-search header-icon"></i> </a> 
                     <%= link_to '<i class="fa fa-twitter header-icon"></i>'.html_safe, "http://www.twitter.com/HETIMedDir", :class => 'header-btn header-btn-sm', :'data-hover' => 'tooltip', :'data-placement' => 'left', :title => 'follow me on twitter' %>
                     <a href="https://au.linkedin.com/in/drallewellyn" class="header-btn header-btn-sm" data-hover="tooltip" data-placement="left" title="link me on linkedin"> <i class="fa fa-linkedin header-icon"></i> </a> 
