--- a/app/views/contacts/_new.html.erb
+++ b/app/views/contacts/_new.html.erb
@@ -18,7 +18,7 @@
     </div>
     <br />
     <p class="text-center">
-        <%= button_tag(type: 'Register for Updates', :class => 'btn btn-slide-panel btn-lg btn-block') do %>
+        <%= f.submit, button_tag(type: 'Register for Updates', :class => 'btn btn-slide-panel btn-lg btn-block') do %>
             <i class="ti ti-lock"></i> Register
         <% end %>
     </p>  
