--- a/app/views/contacts/create.html.erb
+++ b/app/views/contacts/create.html.erb
@@ -1,6 +1,4 @@
-<h1 id="page_title">Say Hello!</h1>
-
-<div class="skinny_wrapper wrapper_padding">
-  <h1>Thank you for your message!</h1>
+<div>
+  <h1>Thank you for subscribing!</h1>
   <p>I'll get back to you soon.</p>
 </div>
