style thank you for subscribing page

--- a/app/views/contacts/create.html.erb
+++ b/app/views/contacts/create.html.erb
@@ -1,4 +1,15 @@
-<div>
-  <h1>Thank you for subscribing!</h1>
-  <p>I'll get back to you soon.</p>
+<div class="page-content" role="main">
+  <div class="container"> 
+      <div class="row sixteen-gutter big-text-banner-wrapper">
+        <div class="col-lg-3">
+          <h1>Thank you for subscribing!</h1>
+          <p>I'll get back to you soon.</p>
+          <br />
+          <div class="text-info">
+            <%= link_to "Home Page", root_path, class: "btn btn-info" %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
