--- a/app/views/contacts/_new.html.erb
+++ b/app/views/contacts/_new.html.erb
@@ -17,9 +17,6 @@
         <%= f.text_field :nickname, hint: 'leave this field blank' %>
     </div>
     <br />
-    <p class="text-center">
-        <%= button_tag(type: 'Register for Updates', :class => 'btn btn-slide-panel btn-lg btn-block') do %>
-            <i class="ti ti-lock"></i> Register
-        <% end %>
-    </p>  
+    <%= f.submit 'Send Message', class: "button" %>
+      
 <% end %>
