--- a/app/views/pletools/_form.html.erb
+++ b/app/views/pletools/_form.html.erb
@@ -31,8 +31,8 @@
       <%= f.label :description %>*<br>
       <%= f.text_area :description, class: 'form-control form-control-lg', :rows => "10" %><br>
         <br>
-      <%= f.label :tag_list, "Tags (separated by commas)" %>
-      <%= f.text_field :tag_list, class: 'form-control' %>
+      <%= f.label :pletag_list, "Tags (separated by commas)" %>
+      <%= f.text_field :pletag_list, class: 'form-control' %>
         <br>
       <%= f.submit 'Update', :class => 'btn btn-primary' %>
     </div>
