--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,7 +19,8 @@
                 <div class="col-sm-7 col-md-9 footer-col">
                     <h4 class="footer-title">About Me</h4>
                     <div class="has-tooltip" data-hover= "tooltip" data-placement="top" title="stick a popup picture here">
-                    <p>I'm a Psychiatrist, Medical Manager and a few years ago I got selected for a really cool job managing a whole host of medical education and training jobs.  I've always been interested in technology.</p>
+                        <p>I'm a Psychiatrist, Medical Manager and a few years ago I got selected for a really cool job managing a whole host of medical education and training jobs.  I've always been interested in technology.</p>
+                    </div>
                 </div>
                 <!-- /.col-sm-7 col-md-9 footer-col--> 
             </div>
