--- a/app/views/pletools/show.html.erb
+++ b/app/views/pletools/show.html.erb
@@ -32,6 +32,7 @@
                                 <div class="text-info">
                                     <%= link_to "Edit Article", edit_pletool_path(@pletool), class: "btn btn-primary" %>
                                     <%= link_to "Delete Article", pletool_path(@pletool), class: "btn btn-danger", method: :delete, data: { confirm: "Are you sure?" } %>
+                                    <%= link_to "PLE Tool Index", pletool_path, class: "btn btn-success" %>
                                 </div>
                             <% end %>
                             <!--/ end CRUD options -->
