--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -60,7 +60,7 @@
 <!--/ entry-header -->
 <!--/ thumbnail if present -->
 <% if @post.image.exists? %>    
-    <%= link_to image_tag @post.image.url(:medium), :class => 'img-full-width-tight' %>
+    <%= image_tag(@post.image.url(:large)) %>
 <% end %>
 <!--/ end thumbnail if present -->
 <!--/ begin article content -->
