--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -32,6 +32,7 @@
                                 <div class="text-info">
                                     <%= link_to "Edit Article", edit_post_path(@post), class: "btn btn-primary" %>
                                     <%= link_to "Delete Article", post_path(@post), class: "btn btn-danger", method: :delete, data: { confirm: "Are you sure?" } %>
+                                    <%= link_to "Blog Index", post_path, class: "btn btn-success" %>
                                 </div>
                             <% end %>
                             <!--/ end CRUD options -->
