--- a/app/views/contacts/_new.html.erb
+++ b/app/views/contacts/_new.html.erb
@@ -18,6 +18,6 @@
     </div>
     <br />
     <%= button_tag(type: 'submit', class: "text-center btn btn-slide-panel btn-lg btn-block") do %>
-        <i class="ti ti-lock"></i> Log In
+        <i class="ti ti-lock"></i> Subscribe
     <% end %>      
 <% end %>
