--- a/app/views/contacts/_new.html.erb
+++ b/app/views/contacts/_new.html.erb
@@ -1,23 +1,3 @@
-<%= form_for Contact.new do |f| %>
-    <div>
-        <%= f.label :firstname %><br />
-        <%= f.text_field :firstname, autofocus: true, required: true, :class => 'form-control form-control-lg', placeholder: 'enter your first name' %>
-    </div>
-    <div>
-        <%= f.label :lastname %><br />
-        <%= f.text_field :lastname, autofocus: true, required: true, :class => 'form-control form-control-lg', placeholder: 'enter your last name' %>
-    </div>
-    <div>
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, required: true, class: "form-control form-control-lg", placeholder: "enter valid email"%>
-    </div>
-    <div class="hidden">
-        <%= f.label :nickname %>
-        <br>
-        <%= f.text_field :nickname, hint: 'leave this field blank' %>
-    </div>
-    <br />
-    <%= button_tag(type: 'submit', class: "text-center btn btn-slide-panel btn-lg btn-block") do %>
-        <i class="ti ti-ink-pen"></i> Subscribe
-    <% end %>      
-<% end %>
+<h2>
+  Sorry this feature is not available quite yet.
+</h2>
