Add jumbotron to PLETool index

--- a/app/views/pletools/index.html.erb
+++ b/app/views/pletools/index.html.erb
@@ -16,7 +16,9 @@
     <!-- /.page-header-primary --> 
     <!-- =========== BEGIN CONTENT FOR THE PAGE =========================================================================== -->
     <div class="page-content" role="main">
-
+        <div class="jumbotron">
+            <h4 class="text-center">Here I intend to document all the tools that I utilize in my own Personal Learning Environment.</h4>
+        </div>
         <div class="container">
             <div class="filter">
                 <span class="filter-title">
