--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -5,7 +5,7 @@
 *= require bootstrap
  *= require b-different-retro.unpacked
  *= require theme-assets.min
- *= require bootstrap.min
+ = require bootstrap.min
  *= require b-different-retro.min
  *= require logo-font
  *= require theme-assets.unpacked
