adjust routes and controller to get pletags index working correctly

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -2,14 +2,15 @@
 
 // CSS
 /*
-*= require bootstrap
+  *= require bootstrap
  *= require b-different-retro.unpacked
  *= require theme-assets.min
- = require bootstrap.min
  *= require b-different-retro.min
  *= require logo-font
  *= require theme-assets.unpacked
  *= require jquery-ui
+ *= require masonry/centered
+ *= require masonry/fluid
 */ 
 
 
