--- a/app/views/pletools/_form.html.erb
+++ b/app/views/pletools/_form.html.erb
@@ -25,10 +25,10 @@
       <%= f.label :title %>*<br>
       <%= f.text_field :title, class: 'form-control form-control-lg' %><br>
         <br>
-      <%= f.label :link %>*<br>
+      <%= f.label :link %><br>
       <%= f.url_field :link, class: 'form-control form-control-lg' %><br>
         <br>  
-      <%= f.label :description %><br>
+      <%= f.label :description %>*<br>
       <%= f.text_area :description, class: 'form-control form-control-lg', :rows => "10" %><br>
         <br>
       <%= f.label :pletag_list, "Tags (separated by commas)" %>
