--- a/app/views/pletools/index.html.erb
+++ b/app/views/pletools/index.html.erb
@@ -15,7 +15,8 @@
     </div>
     <!-- /.page-header-primary --> 
     <!-- =========== BEGIN CONTENT FOR THE PAGE =========================================================================== -->
-    <div class="page-content" role="main">
+    <div id="masposts" class="transitions-enabled">
+        <div class="page-content" role="main">
         <div class="jumbotron">
             <h4 class="text-center">Here I intend to document all the tools that I utilize in my own Personal Learning Environment.</h4>
         </div>
