fix paths on hearder for new pletool page

--- a/app/views/pletools/new.html.erb
+++ b/app/views/pletools/new.html.erb
@@ -4,11 +4,10 @@
     <!-- _________ Page Header ___________ -->
     <div class="page-header-primary">
         <div class="container">
-            <h2>New Blog Post</h2>
+            <h2>my PLE Tool Portfolio</h2>
             <ol class="breadcrumb page-header-breadcrumb hidden-xs">
-                <li><a href="index.html" class="link-underline">Home</a></li>
-                <li> <a class="link-underline" href="blog-summary-masonry-layout.html"> Blog</a> </li>
-                <li class="active">PLE Tool</li>
+                <li><%= link_to 'Home', root_path %></li>
+                <li class="active">my PLE Tool Portfolio</li>
             </ol>
         </div>
         <!-- /.container (for page-header-primary) --> 
