change header routes new post page

--- a/app/views/pletools/new.html.erb
+++ b/app/views/pletools/new.html.erb
@@ -7,6 +7,7 @@
             <h2>my PLE Tool Portfolio</h2>
             <ol class="breadcrumb page-header-breadcrumb hidden-xs">
                 <li><%= link_to 'Home', root_path %></li>
+                <li><%= link_to "PLE Tools", pletools_path, class: "link-underline" %> </li>
                 <li class="active">my PLE Tool Portfolio</li>
             </ol>
         </div>
