--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,9 +6,9 @@
         <div class="container">
             <h2>New Blog Post</h2>
             <ol class="breadcrumb page-header-breadcrumb hidden-xs">
-                <li><a href="index.html" class="link-underline">Home</a></li>
-                <li> <a class="link-underline" href="blog-summary-masonry-layout.html"> Blog</a> </li>
-                <li class="active">Single Blog</li>
+                <li><%= link_to 'Home', root_path %></li>
+                <li><%= link_to "PLE Tools", postss_path, class: "link-underline" %> </li>
+                <li class="active">my Blog</li>
             </ol>
         </div>
         <!-- /.container (for page-header-primary) --> 
