--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -44,7 +44,7 @@
 
                 <!-- NEW STUFF -->
                 <% @posts.each do |post| %>
-                    <div class="box col3">
+                    <div class="box col3" list-style-type="none">
                     <li class="post msnry-blog-entry">
                         <% if post.image.exists? %>
                             <div class="click-slide click-top"> 
